# epsilon-api

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-approve.yml  ci-cd.yml
app/: config.py  database.py  main.py
app/api/v1/endpoints/: auth.py  insights.py  trends.py
app/services/: cache.py  google_trends.py  reddit.py  trends.py  twitter.py
app/services/utils/: analyse.py
tests/: conftest.py
tests/unit/api/v1/endpoints/: test_auth.py  test_insights.py  test_trends.py
tests/unit/app/: test_main.py
tests/unit/app/api/v1/endpoints/: test_trends.py
tests/unit/app/services/: test_google_trends.py  test_reddit.py  test_trends.py  test_twitter.py
tests/unit/app/services/utils/: test_analyse.py
