[tool.poetry]
name = "epsilon-api"
version = "0.1.0"
description = "A FastAPI-based backend service for the Epsilon Healthcare Analytics platform."
authors = ["Gowrisankar <goch@moodagent.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.41"
Pydantic = "^1.10.2"
PyJWT = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
