[tool.poetry]
name = "epsilon-api"
version = "0.1.0"
description = "A FastAPI-based backend service for the Epsilon Healthcare Analytics platform."
authors = ["Gowrisankar <goch@moodagent.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.41"
Pydantic = "^1.10.2"
PyJWT = "^2.4.0"
pytrends = "^4.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
requests = "^2.32.3"
anyio = "^4.8.0"
httpx = "^0.23.0"

[tool.pytest.ini_options]
norecursedirs = ".* tmp* __pycache__"
testpaths = [ "tests",]
addopts = "--cov=. --cov-report=term-missing -vv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
